prometheus/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus  
  namespace: kube-ops
  labels:
    app: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus    
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - image: prom/prometheus:v2.4.3
        name: prometheus
        command: 
        - "/bin/prometheus"           
        args:
        # 指定prometheus 配置文件地址
        - "--config.file=/etc/prometheus/prometheus.yml"
        # 指定TSDB数据存储路径
        - "--storage.tsdb.path=/prometheus"
        # 指定数据保留多长时间
        - "--storage.tsdb.retention=24h"
        # 开启对admin api访问权限
        - "--web.enable-admin-api"
        # 开启支持热更新
        - "--web.enable-lifecycle"
        ports:
        - containerPort: 9090
          protocol: TCP 
          name: http
        volumeMounts:
        - mountPath: "/prometheus"  
          subPath: prometheus
          name: data
        - mountPath: "/etc/prometheus"
          name: config-volume    
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 100m
            memory: 512Mi    
      securityContext:
        runAsUser: 0      
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prometheus
      - name: config-volume
        configMap: 
          name: prometheus-config
