prometheus/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus 
  namespace: kube-ops
  labels:
    app: prometheus
spec:
  selector: 
    app: prometheus
  ports: 
    - name: web
      port: 9090
      targetPort: http
