prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-ops
spec:
  rules:
    - host: prometheus.leimeng.com
      http: 
        paths:
          - path: /  
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port: 
                  number: 9090
